# chronos-graph

./: .codacy.yaml  .dmypy.json  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  SPEC.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/workflows/: ci.yml
docker/postgres/: Dockerfile  init.sql  schema.sql
docs/: architecture_review_and_improvements.md  embedding-models.md
docs/agent-prompts/: memory-save-system-prompt.md
docs/plans/: 2026-03-26-full-architecture-redesign-design.md  2026-03-26-implementation-plan.md  2026-03-26-robustness-design.md  2026-03-28-sqlite-robustness-design.md  2026-04-01-config-wal-validation-test-update.md  2026-04-01-phase2-handover.md  2026-04-02-fix-reported-issues.md  2026-04-02-task5-update-tests.md  2026-04-02-traversal-timeout-and-settings-helper-design.md  2026-04-02-traversal-timeout-and-settings-helper-plan.md  2026-04-03-embedding-compliance-fixes.md  2026-04-03-embedding-fixes-design.md  2026-04-03-embedding-fixes-implementation-plan.md  2026-04-03-fix-reported-issues-design.md  2026-04-03-fix-reported-issues-plan.md  2026-04-03-local-model-validation-and-bracket-fix-implementation-plan.md  2026-04-03-pre-commit-task-2-verification.md  2026-04-03-sqlite-security-fix-design.md  2026-04-03-sqlite-security-fix-plan.md  2026-04-03-storage-validation-and-connection-optimization-design.md  2026-04-03-storage-validation-and-connection-optimization-plan.md  2026-04-03-unused-import-cleanup-implementation-plan.md  2026-04-03-update-memory-type-safety-design.md  2026-04-03-update-memory-type-safety-plan.md  2026-04-03-update-pre-commit-hooks-design.md  2026-04-03-update-pre-commit-hooks-plan.md  2026-04-04-fix-reported-issues-design.md  2026-04-04-fix-reported-issues-plan.md  2026-04-05-fix-headings-and-commands.md  2026-04-05-task5-refactor-background-task-test-design.md  2026-04-10-dashboard-web-ui-design.md  2026-04-10-dashboard-web-ui-plan.md  2026-04-13-dashboard-realignment-plan.md  2026-04-13-fix-ci-and-logger-test-design.md  2026-04-13-fix-ci-and-logger-test-plan.md  2026-04-14-dashboard-realignment-completion-plan.md
docs/superpowers/plans/: 2026-04-15-memory-save-strategy.md  2026-04-16-session-flush-test-improvement.md  2026-05-01-mcp-gateway.md  20260420_migration_system.md
docs/superpowers/specs/: 2026-04-14-memory-save-strategy-design.md  2026-04-30-mcp-gateway-design.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
frontend/e2e/: dashboard.spec.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.test.ts  client.ts  graph.ts  logs.ts  stats.ts  websocket.ts
frontend/src/components/common/: ThemeToggle.tsx
frontend/src/pages/: Dashboard.tsx  LogExplorer.tsx  NetworkView.tsx  Settings.tsx
frontend/src/stores/: graphStore.ts  logStore.test.ts  logStore.ts  settingsStore.ts  statsStore.ts
frontend/src/types/: api.ts  cytoscape-cose-bilkent.d.ts  graph.ts
frontend/src/utils/: apiUtils.ts  logUtils.ts
frontend/tests/: statsStore.test.ts
scripts/: bootstrap.sh  generate_config.py  migrate_dimension.py
src/context_store/: __init__.py  __main__.py  config.py  logger.py  orchestrator.py  server.py
src/context_store/dashboard/: __init__.py  api_server.py  log_collector.py  schemas.py  services.py  websocket_manager.py
src/context_store/embedding/: __init__.py  custom_api.py  litellm.py  local_model.py  openai.py  protocols.py
src/context_store/extensions/: __init__.py  noop.py  protocols.py
src/context_store/ingestion/: __init__.py  adapters.py  batch_processor.py  chunker.py  classifier.py  deduplicator.py  graph_linker.py  pipeline.py  task_registry.py
src/context_store/lifecycle/: __init__.py  archiver.py  consolidator.py  decay_scorer.py  manager.py  purger.py
src/context_store/models/: __init__.py  graph.py  memory.py  search.py
src/context_store/retrieval/: __init__.py  graph_traversal.py  keyword_search.py  pipeline.py  post_processor.py  query_analyzer.py  result_fusion.py  vector_search.py
src/context_store/storage/: __init__.py  factory.py  inmemory.py  neo4j.py  postgres.py  protocols.py  redis.py  sqlite.py  sqlite_graph.py
src/context_store/utils/: __init__.py  sqlite_interrupt.py  stale_lock.py  url.py
src/mcp_gateway/: __init__.py  __main__.py  app.py  audit.py  config.py  errors.py  server.py
src/mcp_gateway/audit/: __init__.py  logger.py
src/mcp_gateway/auth/: __init__.py  api_key.py  handshake.py  headers.py  protocol.py  session.py
src/mcp_gateway/filters/: __init__.py  factory.py  none_filter.py  protocol.py  structural_allowlist.py
src/mcp_gateway/policies/: intents.example.yaml
src/mcp_gateway/policy/: __init__.py  engine.py  loader.py  models.py
src/mcp_gateway/tools/: __init__.py  proxy.py  registry.py
src/mcp_gateway/upstream/: __init__.py  context_store_client.py
tests/: conftest.py
tests/benchmark/: test_performance.py
tests/integration/: conftest.py  test_e2e.py  test_postgres_integration.py  test_postgres_schema.py  test_sqlite_graph_dashboard.py  test_sqlite_schema.py  test_storage_readonly.py
tests/unit/: conftest.py  test_adapters.py  test_api_logs.py  test_api_server.py  test_archiver.py  test_batch_processor.py  test_chunker.py  test_classifier.py  test_code_rabbit_fixes.py  test_config.py  test_consolidator.py  test_dashboard_service.py  test_dashboard_ws.py  test_decay_scorer.py  test_deduplicator.py  test_embedding.py  test_embedding_factory.py  test_embedding_litellm.py  test_embedding_local.py  test_extensions.py  test_graph_linker.py  test_graph_traversal.py  test_ingestion_pipeline.py  test_inmemory_cache.py  test_keyword_search.py  test_lifecycle_manager.py  test_logger.py  test_mcp_gateway.py  test_migration_runner.py  test_models.py  test_neo4j_storage.py  test_orchestrator.py  test_postgres_storage.py  test_purger.py  test_query_analyzer.py  test_redis_storage.py  test_result_fusion.py  test_server.py  test_session_flush_tools.py  test_session_management.py  (+8 more)
(+18 files in other folders)
