[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-store-mcp"
version = "2.0.0"
description = "MCP-based long-term memory system for AI agents"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.21.0",
    "sqlite-vec>=0.1.0",
    "tenacity>=8.0.0",
    "tiktoken>=0.6.0",
    "filelock>=3.13.0",
]

[project.optional-dependencies]
storage-postgres = [
    "asyncpg>=0.29.0",
    "neo4j>=5.0.0",
    "redis>=5.0.0",
]
embedding-local = [
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
]
embedding-openai = [
    "openai>=1.0.0",
]
embedding-litellm = [
    "litellm>=1.0.0",
]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
all = [
    "context-store-mcp[storage-postgres,embedding-local,embedding-openai,embedding-litellm,dev]",
]

[project.scripts]
context-store = "context_store.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "S", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101", # assert detected
    "S105", # Possible hardcoded password
    "S106", # Possible hardcoded password
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = false
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "neo4j.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "redis.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sqlite_vec.*"
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/context_store"]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
