[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-store-mcp"
version = "2.0.0"
description = "MCP-based long-term memory system for AI agents"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.21.0",
    "sqlite-vec>=0.1.0",
    "tenacity>=8.0.0",
    "tiktoken>=0.6.0",
    "filelock>=3.13.0",
    "sse-starlette>=2.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
storage-postgres = [
    "asyncpg>=0.29.0",
    "neo4j>=5.0.0",
    "redis>=5.0.0",
]
embedding-local = [
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
]
dashboard = [
    "websockets>=12.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]
embedding-openai = [
    "openai>=1.0.0",
]
embedding-litellm = [
    "litellm>=1.0.0",
]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
all = [
    "context-store-mcp[storage-postgres,embedding-local,embedding-openai,embedding-litellm,dev]",
]

[project.scripts]
context-store = "context_store.__main__:main"
chronos-dashboard = "context_store.dashboard.api_server:main"
chronos-mcp-gateway = "mcp_gateway.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "S", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101", # assert detected
    "S105", # Possible hardcoded password
    "S106", # Possible hardcoded password
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = false
warn_unused_configs = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
allow_untyped_calls = true
disable_error_code = [
    "arg-type",
    "no-untyped-def",
    "attr-defined",
    "method-assign",
    "union-attr",
    "func-returns-value",
    "no-untyped-call",
    "no-any-return",
    "type-arg",
    "assignment",
    "return-value"
]

[[tool.mypy.overrides]]
module = "context_store.config"
disable_error_code = ["no-any-return", "no-untyped-def"]

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "neo4j.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "redis.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sqlite_vec.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastapi.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "starlette.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "context_store.dashboard.*"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "sse_starlette.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/context_store", "src/mcp_gateway"]

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
